# AGENTS

./: .dockerignore  .env  .env.example  .env.production  .env.production.example  .env.production.template  .env.template  .env.test  .env.test.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  ARCADEDB-ONLY-DEPLOYMENT.md  CLAUDE.md  Dockerfile.build  Dockerfile.production  Dockerfile.test  README.md  TEMPLATE_USAGE.md  TEST-DEPLOYMENT-README.md  agent-lock.json  agent.json  agent.py  agents-library-0.1.0.tgz  deploy-arcadedb-only.sh  deploy-log.txt  deploy-selective.bat  deploy-template-agent-test.sh  deploy-to-napoftheearth-selective.sh  docker-compose.arcadedb-only.yml  docker-compose.production.yml  docker-compose.test.yml  env  extract-tools.cjs  index.js  launch-git-mcp.bat  log.txt  package-lock.json  package.json  (+10 more)
.claude/: settings.local.json
.serena/: project.yml
Docs/: ARCHITECTURE_V1.md  ARCHITECTURE_V2.md  DEPLOYMENT.md  QUEST_WORKFLOW_V1.md  QUEST_WORKFLOW_V2.md  ability-audit.md  agent-lead-extraction-plan.md  gateway-networking-concepts.md  network-topology.md
ability-arcadedb/: .dockerignore  README.md  agent-lock.json  agent.json  arcade-admin.js  config.toml  config.yml  docker-compose.yml  export.json  jsdoc.conf.json  package-lock.json  package.json  secrets.toml  spec.md  test-runner.js  tsconfig.json  vitest.config.ts
ability-backup/: README.md  agent.json  config.toml  config.yml  package-lock.json  package.json  secrets.toml
ability-deploy/: .env.example  README.md  index.js  package.json
ability-docs-memory/: README.md  agent.json  config.toml  config.yml  package-lock.json  package.json  tsconfig.json
ability-eval/: .env.example  README.md  agent-lock.json  agent.json  config.toml  index.ts  package-lock.json  package.json  tsconfig.json
ability-file-cloud/: .env.example  .gitignore  README.md  agent-lock.json  agent.json  config.toml  index.ts  package-lock.json  (+2 more)
ability-voice/: README.md  agent.json  config.toml  pyproject.toml
ability-voice/src/ability_voice/: __main__.py
mcp-server-blender/: agent.json  config.toml  pyproject.toml
mcp-server-blender/src/mcp_server_blender/: __init__.py  blender_manager.py  bootstrap.py  server.py
(+1466 files in other folders)
