[project]
name = "mcp-server-blender"
version = "1.0.0"
description = "Blender 3D operations MCP server — headless Blender with tool interface"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.scripts]
mcp-server-blender = "mcp_server_blender.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
